--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
+    "dotenv": "^16.0.1",
     "jQuery": "^1.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -22,7 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host 0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
